--- a/css/todo-app/app.css
+++ b/css/todo-app/app.css
@@ -1,5 +1,7 @@
 :root {
   font: 600 16px "Open Sans", sans-serif;
+
+  --gutter: 20px;
 }
 
 body {
@@ -17,4 +19,12 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+}
+
+.todo-app {
+  background-color: #ecf0f1;
+  width: 100%;
+  border-radius: 4px 4px 0 0;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
+  max-width: calc(100% - var(--gutter));
 }
