--- a/css/todo-app/app.css
+++ b/css/todo-app/app.css
@@ -27,4 +27,36 @@ body {
   border-radius: 4px 4px 0 0;
   box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
   max-width: calc(100% - var(--gutter));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.todo-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  order: -1;
+  display: flex;
+  flex-direction: column;
+}
+
+[class^="todo-list__item"] {
+  cursor: pointer;
+  height: 80px;
+  display: block;
+  text-transform: uppercase;
+  color: #af544f;
+  letter-spacing: 2px;
+  box-sizing: border-box;
+  padding: 27px 33px 0 78px;
+  box-shadow: 0 1px 0 0 #e6e6e6, 0 2px 0 0 #ffffff;
+  background: url("https://jsbin-user-assets.s3.amazonaws.com/GarthDB/box.svg")
+    28px 16px no-repeat;
+}
+
+.todo-list__item--completed {
+  color: #16a085;
+  background-image: url("https://jsbin-user-assets.s3.amazonaws.com/GarthDB/done.svg");
 }
